--- a/style.css
+++ b/style.css
@@ -222,18 +222,18 @@ footer {
 
 .footerleft {
   margin-left: 5%;
-  width: 70%;
+  width: 60%;
   font-size: 12px;
 }
 
 .footerlogo {
   width: 150px;
-  height: 100px;
+  height: 50px;
 }
 
 .social_icons {
   text-align: center;
-  margin-top: 15%;
+  margin-top: 10%;
 }
 
 .social_icons i {
@@ -241,10 +241,10 @@ footer {
 }
 
 .footermiddle {
-  width: 100%;
+  width: 80%;
   display: flexbox;
   padding-left: 2%;
-  padding-top: 3%;
+  padding-top: 1%;
   margin-left: 7%;
 
 }
@@ -266,6 +266,12 @@ footer {
   margin-right: 5%;
 }
 
+
+.footer-right{
+  width: 50%;
+  height: 40%;
+}
+
 .mapouter {
   margin-top: 9%;
   position: relative;
@@ -278,9 +284,8 @@ footer {
   overflow: hidden;
   background: none !important;
   height: 100%;
-  width: 100%;
+  width: 90%;
 }
-
 
 .bottom_container {
   margin-right: -5.5% !important;
