--- a/style.css
+++ b/style.css
@@ -1,22 +1,11 @@
 body {
-  margin-top: 0%;
-  margin-right: 5%;
-  margin-left: 5%;
+  margin: 0;
   font-family: Montserrat;
 }
-@media only screen and(max-width:768px) {
-  body{
-    width: 100%;
-  }
-}
-
 
 .bg-img {
   background-image: url(images/hills.jpg);
   background-size: cover;
-  margin-right: -5.5% !important;
-  margin-left: -5.7% !important;
-
 }
 
 .top_container {
@@ -29,7 +18,6 @@ header {
   height: 20%;
   align-items: center;
   margin-left: 1%;
-
 }
 
 nav {
@@ -61,7 +49,7 @@ a {
 }
 
 .explorenepal {
-  font-size: 100px;
+  font-size: 80px;
   color: aliceblue;
   font-weight: bolder;
   text-align: center;
@@ -74,7 +62,7 @@ a {
 }
 
 .exploreworld {
-  font-size: 60px;
+  font-size: 50px;
   color: aliceblue;
   margin-top: -5%;
   font-weight: normal;
@@ -91,11 +79,11 @@ a {
 }
 
 #searchname {
-  padding-top: 1.3%;
-  padding-bottom: 1.3%;
+  padding-top: 1.5%;
+  padding-bottom: 1.5%;
   padding-left: 2%;
   padding-right: 10%;
-  font-size: 20px;
+  font-size: 18px;
   font-family: inherit;
   margin-right: 0px;
   border: 0px;
@@ -105,8 +93,8 @@ a {
 }
 
 #searchbtn {
-  padding: 1.3%;
-  font-size: 20px;
+  padding: 1.5%;
+  font-size: 18px;
   font-family: inherit;
   color: white;
   background-color: #22b0fc;
@@ -117,8 +105,8 @@ a {
   cursor: pointer;
 }
 
-#searchbtn:hover{
-background-color: #1575a8;
+#searchbtn:hover {
+  background-color: #1575a8;
 
 }
 
@@ -134,6 +122,7 @@ background-color: #1575a8;
 .firstrowimg {
   display: inline-block;
   margin-bottom: 2%;
+  margin-left: 3%;
 
 }
 
@@ -170,6 +159,7 @@ div.desc {
 .secondrowimg {
   display: inline-block;
   margin-bottom: 5%;
+  margin-left: 3%;
 
 }
 
@@ -197,6 +187,7 @@ div.desc {
 #icons {
   color: #22b0fc;
   cursor: pointer;
+  font-size: 20px;
 }
 
 .row1_destinations {
@@ -211,8 +202,6 @@ div.desc {
 
 footer {
   display: inline-flex;
-  margin-right: -5.5% !important;
-  margin-left: -5.7% !important;
   margin-top: 5%;
   box-shadow: 2px 2px 8px black;
   border-radius: 20px 20px 0px 0px;
@@ -234,6 +223,7 @@ footer {
 .social_icons {
   text-align: center;
   margin-top: 10%;
+  font-size: 25px;
 }
 
 .social_icons i {
@@ -257,17 +247,17 @@ footer {
 }
 
 .contact_items {
-  padding-top: 2%;
+  padding-top: 4%;
   font-size: 12px;
 
 }
 
-.footer-right{
+.footer-right {
   margin-right: 5%;
 }
 
 
-.footer-right{
+.footer-right {
   width: 50%;
   height: 40%;
 }
@@ -288,8 +278,6 @@ footer {
 }
 
 .bottom_container {
-  margin-right: -5.5% !important;
-  margin-left: -5.7% !important;
   background-color: #22b0fc;
   height: 30px;
   font-size: 12px;
